# cc1005-life-game

./: README.md  life-game.cabal
app/: Main.hs
